--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,9 @@
 [submodule "utilities/yasnippets-rspec"]
 	path = utilities/yasnippets-rspec
 	url = git@github.com:tumf/yasnippets-rspec.git
+[submodule "modes/chef-mode"]
+	path = modes/chef-mode
+	url = git@github.com:tumf/chef-mode.git
+[submodule "modes/php-htm-mode"]
+	path = modes/php-htm-mode
+	url = git://github.com/traceypooh/php-htm-mode.git
