--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,13 @@
 \#*
 *~
 *.elc
-el-get
-tramp
-elpa
+/el-get
+tramp$
+/elpa
 /ac-comphist.dat
 /.mc-lists.el
 /places
-flycheck_init.el
+/flycheck_init.el
 /.emacs.desktop
 /ido.last
 /recentf
